--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script src="bower_components/angular-resource/angular-resource.min.js" type="text/javascript"></script>
         <script src="bower_components/angular-filter/dist/angular-filter.min.js" type="text/javascript"></script>
         <script src="bower_components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
+        <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js" type="text/javascript"></script>
 
         <!--
         Google Maps API
@@ -46,12 +47,12 @@
         <!--
         Filters
         -->
-        <script src="js/filters.js"></script>
+        <script src="js/filters.js" type="text/javascript"></script>
 
         <!--
         Services
         -->
-        <script src="js/services.js"></script>
+        <script src="js/services.js" type="text/javascript"></script>
 
         <!--
         Directives
