--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             -->
             <ul class="menu" data-ng-controller="MenuCtrl">
                 <li class="brand" data-on-scroll-top="false">
-                    {{brand}}
+                    <span>{{brand}}</span>
                 </li>
                 <li data-ng-repeat="item in items" data-ng-click="selectItem($index)" data-ng-class="{active: $index === selectedIndex}">
                     <a href="{{item.url}}"><img data-ng-src="{{item.image}}"></a>
