--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <!--
         Controllers
         -->
+        <script src="js/controllers/HomeCtrl.js" type="text/javascript"></script>
         <script src="js/controllers/MenuCtrl.js" type="text/javascript"></script>
         <script src="js/controllers/RdvListCtrl.js" type="text/javascript"></script>
         <script src="js/controllers/RdvDetailCtrl.js" type="text/javascript"></script>
