Séparation des services + mise à jour du service Data

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <!--
         Services
         -->
-        <script src="js/services.js" type="text/javascript"></script>
+        <script src="js/services/Data.js" type="text/javascript"></script>
+        <script src="js/services/Notification.js" type="text/javascript"></script>
 
         <!--
         Directives
