--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <script src="js/controllers/RdvDetailCtrl.js" type="text/javascript"></script>
         <script src="js/controllers/PsSearchCtrl.js" type="text/javascript"></script>
         <script src="js/controllers/SettingsCtrl.js" type="text/javascript"></script>
+        <script src="js/controllers/TutorielCtrl.js" type="text/javascript"></script>
 
         <!--
         Filters
