Détail RDV : ajout de la date prévisionnelle de remboursement

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--
+        Raccourcis & favicon
+        -->
+        <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-touch-icon-60x60.png">
+        <link rel="icon" type="image/png" href="img/icons/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="img/icons/favicon-16x16.png" sizes="16x16">
+
+        <!--
         LESS : Laisser dans <head>
         -->
         <link href="less/index.less" rel="stylesheet/less" type="text/css"/>
