--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <script src="js/controllers/PsSearchCtrl.js" type="text/javascript"></script>
         <script src="js/controllers/SettingsCtrl.js" type="text/javascript"></script>
         <script src="js/controllers/TutorielCtrl.js" type="text/javascript"></script>
+        <script src="js/controllers/ContactCtrl.js" type="text/javascript"></script>
 
         <!--
         Filters
